--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ width: 40%;
                 <p><i class="fa-solid fa-square-phone"></i> 062 153 0072</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/relebohile.motloli.35/"><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/na.rafikiiii/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/relebohile-motloli-37318628a/"><i class="fa-brands fa-linkedin"></i></a>
                    
                 </div>
                 <a href="pictures/CV.pdf" Download="btn btn2" class="btn btn2">Download CV</a>
