--- a/Profile web.1/index.html
+++ b/Profile web.1/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-        <header class="header">
+        <header class="header"> 
             <a href="#home" class="logo">Relebohile <span>Motloli</span></a>
             <i class="bx bx-menu" id="menu-icon" ></i>
                
@@ -166,7 +166,7 @@
                             <div class="work-info">
                                 <h3>Social Media Web</h3>
                                 <p>The app connects you to people around the world. Coming soon </p>
-                                <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                               <a href="https://github.com/RelebohileMotloli/socialDemo/tree/main3/Social%20web"><i class='bx bxl-github'></i></a></a>
                             </div>
                         </div>
 
